new changes using deepset

--- a/docs/_source/tutorials/notebooks/fine-tuning-sentencesimilarity-rag.ipynb
+++ b/docs/_source/tutorials/notebooks/fine-tuning-sentencesimilarity-rag.ipynb
@@ -137,7 +137,411 @@
     "\n",
     "Here, we will use the [Sentence Compression](https://huggingface.co/datasets/embedding-data/sentence-compression) dataset, which is composed of 180000 pairs of equivalent sentences (uncompressed and compressed sentences from news articles). In our example, we will configure it and upload it to Argilla. Thus, we will reduce the number of samples to 500 and add the guidelines and questions to work with the Argilla UI.\n",
     "\n",
-    "You can check other available datasets [here](https://huggingface.co/blog/how-to-train-sentence-transformers).\n"
+    "In this case, the dataset is composed of pairs of positive similar sentences. But there are more valid types: datasets prepared for NLI like [snli](https://huggingface.co/datasets/snli), datasets with a label for the sentence like [trec](https://huggingface.co/datasets/trec), datasets with a triplet of sentences like [QQP_triplets](https://huggingface.co/datasets/embedding-data/QQP_triplets), etc. You can find more information about the different types of datasets [here](https://huggingface.co/blog/how-to-train-sentence-transformers).\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Retrieving the data from a vector search index"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# import logging\n",
+    "\n",
+    "# logging.basicConfig(format=\"%(levelname)s - %(name)s -  %(message)s\", level=logging.WARNING)\n",
+    "# logging.getLogger(\"haystack\").setLevel(logging.INFO)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from haystack.document_stores import FAISSDocumentStore\n",
+    "\n",
+    "document_store = FAISSDocumentStore(faiss_index_factory_str=\"Flat\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "INFO:haystack.utils.preprocessing:Converting data/argilla_cloud.txt\n"
+     ]
+    }
+   ],
+   "source": [
+    "from haystack.utils import clean_wiki_text, convert_files_to_docs\n",
+    "doc_dir = \"data\"\n",
+    "docs = convert_files_to_docs(dir_path=doc_dir, clean_func=clean_wiki_text, split_paragraphs=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Writing Documents: 10000it [00:00, 412196.35it/s]       \n"
+     ]
+    }
+   ],
+   "source": [
+    "document_store.write_documents(docs)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "INFO:haystack.modeling.utils:Using devices: CPU - Number of GPUs: 0\n",
+      "INFO:haystack.nodes.retriever.dense:Init retriever using embeddings of model sentence-transformers/multi-qa-mpnet-base-dot-v1\n",
+      "INFO:haystack.document_stores.faiss:Updating embeddings for 1 docs...\n",
+      "Updating Embedding:   0%|          | 0/1 [00:00<?, ? docs/s]"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "5b680194e98a4e42bfc680bf57424646",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Batches:   0%|          | 0/1 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Documents Processed: 10000 docs [00:01, 5694.30 docs/s]\n"
+     ]
+    }
+   ],
+   "source": [
+    "from haystack.nodes import EmbeddingRetriever\n",
+    "\n",
+    "retriever = EmbeddingRetriever(\n",
+    "    document_store=document_store, embedding_model=\"sentence-transformers/multi-qa-mpnet-base-dot-v1\"\n",
+    ")\n",
+    "\n",
+    "document_store.update_embeddings(retriever)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "INFO:haystack.modeling.utils:Using devices: CPU - Number of GPUs: 0\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "93094f27f4af422b9b3c4f2786f529c1",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Downloading (…)lve/main/config.json:   0%|          | 0.00/662 [00:00<?, ?B/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "30179b4f92194778a3d71fd1923ec901",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Downloading model.safetensors:   0%|          | 0.00/3.13G [00:00<?, ?B/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "c3b2ca8534c74b8da2d12f7bfb77da40",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Downloading (…)neration_config.json:   0%|          | 0.00/147 [00:00<?, ?B/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "a05496c792f0424a8f3a043bfefb5c78",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Downloading (…)okenizer_config.json:   0%|          | 0.00/2.54k [00:00<?, ?B/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "1adc9c0003ca47ac9c79343381bf5bc2",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Downloading spiece.model:   0%|          | 0.00/792k [00:00<?, ?B/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "b315cba3295047239306d71fb5cb29de",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Downloading (…)/main/tokenizer.json:   0%|          | 0.00/2.42M [00:00<?, ?B/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "afba37f645544012954a612967dfa1a2",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Downloading (…)cial_tokens_map.json:   0%|          | 0.00/2.20k [00:00<?, ?B/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "from haystack.nodes import PromptNode, PromptTemplate, AnswerParser\n",
+    "\n",
+    "rag_prompt = PromptTemplate(\n",
+    "    prompt=\"\"\"Synthesize a comprehensive answer from the following text for the given question.\n",
+    "                             Provide a clear and concise response that summarizes the key points and information presented in the text.\n",
+    "                             Your answer should be in your own words and be no longer than 50 words.\n",
+    "                             \\n\\n Related text: {join(documents)} \\n\\n Question: {query} \\n\\n Answer:\"\"\",\n",
+    "    output_parser=AnswerParser(),\n",
+    ")\n",
+    "\n",
+    "# prompt_node = PromptNode(\n",
+    "#     model_name_or_path=\"text-davinci-003\", api_key=openai_api_key, default_prompt_template=rag_prompt\n",
+    "# )\n",
+    "prompt_node = PromptNode(model_name_or_path=\"google/flan-t5-large\", default_prompt_template=rag_prompt)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from haystack.pipelines import Pipeline\n",
+    "\n",
+    "pipe = Pipeline()\n",
+    "pipe.add_node(component=retriever, name=\"retriever\", inputs=[\"Query\"])\n",
+    "pipe.add_node(component=prompt_node, name=\"prompt_node\", inputs=[\"retriever\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "2552f3aa680f4f5a87af6a512f608ce2",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Downloading readme:   0%|          | 0.00/570 [00:00<?, ?B/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "f80faa06c4ad418ab4d418d980e19769",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Downloading data files:   0%|          | 0/2 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "d270d31aa93e4e878183ba03de4f276a",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Downloading data:   0%|          | 0.00/8.33k [00:00<?, ?B/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "1b9c788c598a4fc68b9172ebc87436bc",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Downloading data:   0%|          | 0.00/4.24k [00:00<?, ?B/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "67db13446bfd48558f38acfef095d84e",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Extracting data files:   0%|          | 0/2 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "134aaf923ddf424982c0d5f308a9738c",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Generating train split:   0%|          | 0/196 [00:00<?, ? examples/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "e6a3bca5d17c40f8b45403c2a2315ff7",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Generating test split:   0%|          | 0/66 [00:00<?, ? examples/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "\n",
+    "dataset = load_dataset(\"argilla/cloud_assistant_questions\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "04f7c2d4e79748369d6930fd85c5b9b1",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Batches:   0%|          | 0/1 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Token indices sequence length is longer than the specified maximum sequence length for this model (2438 > 512). Running this sequence through the model will result in indexing errors\n",
+      "WARNING:haystack.nodes.prompt.invocation_layer.hugging_face:The prompt has been truncated from 2438 tokens to 412 tokens so that the prompt length and answer length (100 tokens) fit within the max token limit (512 tokens). Shorten the prompt to prevent it from being cut off\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Argilla Cloud is a fully managed SaaS solution for data curation and labelling.\n"
+     ]
+    }
+   ],
+   "source": [
+    "output = pipe.run(query=\"What does Argilla?\")\n",
+    "\n",
+    "print(output[\"answers\"][0].answer)"
    ]
   },
   {
@@ -218,14 +622,14 @@
    "source": [
     "### Working in the Argilla UI\n",
     "\n",
-    "Now, we can work in the Argilla UI."
+    "Now, you can go to the Argilla UI to explore the dataset and annotate the samples."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img src=\"\" alt=\"Working in the Argilla UI\" style=\"width: 1100px;\">"
+    "<img src=\"../../docs/_source/_static/tutorials/fine-tuning-sentencesimilarity-rag/argilla_ui_sentence_similarity.png\" alt=\"Working in the Argilla UI\" style=\"width: 1100px;\">"
    ]
   },
   {
