chore: Add missing lines in changelog

--- a/docs/_source/tutorials/notebooks/labelling-textclassification-sentence-transformers-semantic.ipynb
+++ b/docs/_source/tutorials/notebooks/labelling-textclassification-sentence-transformers-semantic.ipynb
@@ -297,7 +297,7 @@
     "    label_schema=[\"change_details\", \"card\", \"atm\", \"top_up\", \"balance\", \"transfer\", \"exchange_rate\", \"pin\"]\n",
     ")\n",
     "\n",
-    "rg.configure_dataset(name=\"banking77-topics\", settings=settings)\n",
+    "rg.configure_dataset_settings(name=\"banking77-topics\", settings=settings)\n",
     "\n",
     "rg.log(\n",
     "    name=\"banking77-topics\",\n",
