--- a/docs/_source/tutorials/notebooks/labelling-tokenclassification-deletelabels.ipynb
+++ b/docs/_source/tutorials/notebooks/labelling-tokenclassification-deletelabels.ipynb
@@ -373,7 +373,7 @@
    "outputs": [],
    "source": [
     "# change the configuration of the dataset\n",
-    "rg.configure_dataset(name=dataset_name, settings=settings)"
+    "rg.configure_dataset_settings(name=dataset_name, settings=settings)"
    ]
   },
   {
