--- a/docs/_source/tutorials/notebooks/training-textclassification-classyclassification-activelearning.ipynb
+++ b/docs/_source/tutorials/notebooks/training-textclassification-classyclassification-activelearning.ipynb
@@ -265,7 +265,7 @@
     "except Exception:\n",
     "    pass\n",
     "settings = rg.TextClassificationSettings(label_schema=list(data.keys()))\n",
-    "rg.configure_dataset(name=DATASET_NAME, settings=settings)\n",
+    "rg.configure_dataset_settings(name=DATASET_NAME, settings=settings)\n",
     "\n",
     "# Evaluate and update records\n",
     "def evaluate_records(records, idx = 0):\n",
