docs: fix training-llm-mistral-sft.ipynb url reference code blocks

--- a/docs/_source/tutorials_and_integrations/tutorials/feedback/training-llm-mistral-sft.ipynb
+++ b/docs/_source/tutorials_and_integrations/tutorials/feedback/training-llm-mistral-sft.ipynb
@@ -317,7 +317,7 @@
    "metadata": {},
    "source": [
     "### Training Task\n",
-    "Next, we can set up the [`TrainingTask`](https://docs.argilla.io/en/latest/practical_guides/fine_tune.html#the-trainingtask) for supervised finetuning. This task requires a `formatting_func` that formats the data from Argilla in preparation for training. This formatting function first checks if the data quality is up to par. This is done by inspecting the annotations and checking if a sample was not annotated, annotated as \"Bad\" or discarded. For the purposes of the tutorial, I'll ignore this part and consider all data to be high quality.\n",
+    "Next, we can set up the [TrainingTask](https://docs.argilla.io/en/latest/practical_guides/fine_tune.html#the-trainingtask) for supervised finetuning. This task requires a `formatting_func` that formats the data from Argilla in preparation for training. This formatting function first checks if the data quality is up to par. This is done by inspecting the annotations and checking if a sample was not annotated, annotated as \"Bad\" or discarded. For the purposes of the tutorial, I'll ignore this part and consider all data to be high quality.\n",
     "\n",
     "Then, we convert the data to our desired chat format, where each step consists of:\n",
     "```\n",
@@ -465,9 +465,9 @@
    "metadata": {},
    "source": [
     "### Data Collation\n",
-    "When training LLMs, we want to verify that the text is tokenized and collated correctly. In particular the data collation can be quite important, as some data collators will replace all special tokens (e.g. padding, BOS and EOS tokens) with a label of -100, which is the label that is ignored during training. If this is the case, then the model will not learn to produce the EOS token. Consequently, the model will always respond with endless tokens - far from ideal.\n",
+    "When training LLMs, we want to verify that the text is tokenized and collated correctly. In particular, the data collation can be quite important, as some data collators will replace all special tokens (e.g. padding, BOS and EOS tokens) with a label of -100, which is the label that is ignored during training. If this is the case, then the model will not learn to produce the EOS token. Consequently, the model will always respond with endless tokens - far from ideal.\n",
     "\n",
-    "By default, models trained with supervised finetuning use the [`DataCollatorForLanguageModeling`](https://huggingface.co/docs/transformers/main_classes/data_collator#transformers.DataCollatorForLanguageModeling) data collator, so let's experiment:"
+    "By default, models trained with supervised finetuning use the [DataCollatorForLanguageModeling](https://huggingface.co/docs/transformers/main_classes/data_collator#transformers.DataCollatorForLanguageModeling) data collator, so let's experiment:"
    ]
   },
   {
@@ -625,7 +625,7 @@
    "metadata": {},
    "source": [
     "### ArgillaTrainer & hyperparameters\n",
-    "Next, we can initialize the [`ArgillaTrainer`](https://docs.argilla.io/en/latest/practical_guides/fine_tune.html#the-argillatrainer)! We have already prepared all of the components that it requires."
+    "Next, we can initialize the [ArgillaTrainer](https://docs.argilla.io/en/latest/practical_guides/fine_tune.html#the-argillatrainer)! We have already prepared all of the components that it requires."
    ]
   },
   {
@@ -650,7 +650,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The next step is to configure the trainer with the desired arguments settings for training. We will start with configuration options for the TRL [`SFTTrainer`](https://huggingface.co/docs/trl/trainer#trl.SFTTrainer). This trainer accepts a [PEFT](https://github.com/huggingface/peft) config, allowing us to use the awesome [LoRA](https://huggingface.co/docs/peft/conceptual_guides/lora). This technique accelerates the fine-tuning of large models while consuming less memory. Upon training, this will produce small `adapter_config.json` and `adapter_model.bin` files, which can be combined with the original model to produce the finetuned model. See [this documentation](https://huggingface.co/docs/peft/quicktour#easy-loading-with-auto-classes) for information on how to load these models again.\n",
+    "The next step is to configure the trainer with the desired arguments settings for training. We will start with configuration options for the TRL [SFTTrainer](https://huggingface.co/docs/trl/trainer#trl.SFTTrainer). This trainer accepts a [PEFT](https://github.com/huggingface/peft) config, allowing us to use the awesome [LoRA](https://huggingface.co/docs/peft/conceptual_guides/lora). This technique accelerates the fine-tuning of large models while consuming less memory. Upon training, this will produce small `adapter_config.json` and `adapter_model.bin` files, which can be combined with the original model to produce the finetuned model. See [this documentation](https://huggingface.co/docs/peft/quicktour#easy-loading-with-auto-classes) for information on how to load these models again.\n",
     "\n",
     "We also set the maximum sequence length to 1024 as a way to keep the memory usage down, and we provide the trainer with our custom `data_collator` and `generation_callback`."
    ]
@@ -683,7 +683,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Beyond that, we want to configure the [`TrainingArguments`](https://huggingface.co/docs/transformers/main/en/main_classes/trainer#transformers.TrainingArguments) to set the hyperparameters. Note that we only train with 3000 steps here. This already proved sufficient to finetune a reasonable model that follows our chat format."
+    "Beyond that, we want to configure the [TrainingArguments](https://huggingface.co/docs/transformers/main/en/main_classes/trainer#transformers.TrainingArguments) to set the hyperparameters. Note that we only train with 3000 steps here. This already proved sufficient to finetune a reasonable model that follows our chat format."
    ]
   },
   {
@@ -731,7 +731,7 @@
    "metadata": {},
    "source": [
     "## Perform inference using the finetuned LLM\n",
-    "After training, the model is still in memory as `model`, but often times we will want to load the trained model anew. This is simple using [`AutoPeftModelForCausalLM`](https://huggingface.co/docs/peft/quicktour#easy-loading-with-auto-classes):"
+    "After training, the model is still in memory as `model`, but often, times we will want to load the trained model anew. This is simple using [AutoPeftModelForCausalLM](https://huggingface.co/docs/peft/quicktour#easy-loading-with-auto-classes):"
    ]
   },
   {
@@ -767,7 +767,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "At this point, inference becomes simple too. See the [`generate()`](https://huggingface.co/docs/transformers/main_classes/text_generation#transformers.GenerationMixin.generate) method for more information."
+    "At this point, inference becomes simple too. See the [generate()](https://huggingface.co/docs/transformers/main_classes/text_generation#transformers.GenerationMixin.generate) method for more information."
    ]
   },
   {
