feedbackdatasettemplate code snippet

--- a/docs/_source/tutorials_and_integrations/tutorials/feedback/fine-tuning-sentencesimilarity-rag.ipynb
+++ b/docs/_source/tutorials_and_integrations/tutorials/feedback/fine-tuning-sentencesimilarity-rag.ipynb
@@ -101,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -141,19 +141,6 @@
     "# Replace workspace with the name of your workspace\n",
     "rg.init(\n",
     "    api_url=\"http://localhost:6900\", \n",
-    "    api_key=\"owner.apikey\",\n",
-    "    workspace=\"admin\"\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "rg.init(\n",
-    "    api_url=\"https://sdiazlor-argilla.hf.space\",\n",
     "    api_key=\"owner.apikey\",\n",
     "    workspace=\"admin\"\n",
     ")"
@@ -334,23 +321,31 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# WAITING RELEASE TO CHECK THE CODE\n",
-    "items_rag = {\"query\": [], \"retrieved_document\": []}\n",
-    "\n",
-    "for question, answer, context in tqdm(zip(questions, answers, contexts), total=len(questions)):\n",
-    "    items_rag[\"query\"].append(question)\n",
-    "    items_rag[\"retrieved_document\"].append(answer)\n",
-    "\n",
-    "\n",
+    "# Initialize the FeedbackDatasetTemplate\n",
     "dataset = rg.FeedbackDataset.for_retrieval_augmented_generation(\n",
     "    number_of_retrievals=1,\n",
     "    rating_scale=10,\n",
     "    use_markdown=False,\n",
     "    guidelines=None,\n",
     ")\n",
-    "dataset.add_item(items_rag)\n",
+    "dataset\n",
     "\n",
-    "# ADD SUGGESTIONS"
+    "# Adding records to the dataset\n",
+    "records = [\n",
+    "    rg.FeedbackRecord(\n",
+    "        fields={\"query\": question, \"retrieved_document_1\": context},\n",
+    "        suggestions=[\n",
+    "            {\n",
+    "                \"question_name\": \"response\",\n",
+    "                \"value\": answer,\n",
+    "            }\n",
+    "        ]\n",
+    "    )\n",
+    "    for question, answer, context in tqdm(zip(questions, answers, contexts), total=len(questions))\n",
+    "]\n",
+    "\n",
+    "# Add records to the dataset\n",
+    "dataset.add_records(records)"
    ]
   },
   {
