style and use locales for similarity

--- a/frontend/translation/en.json
+++ b/frontend/translation/en.json
@@ -6,6 +6,8 @@
   "rating": "Rating",
   "saving": "Saving...",
   "saved": "Saved",
+  "minimize": "Minimize",
+  "expand": "Expand",
   "submit-your-feedback": "Submit your feedback",
   "button": {
     "ignore_and_continue": "Ignore and continue"
