--- a/docs/_source/tutorials_and_integrations/tutorials/feedback/fine-tuning-sentencesimilarity-rag.ipynb
+++ b/docs/_source/tutorials_and_integrations/tutorials/feedback/fine-tuning-sentencesimilarity-rag.ipynb
@@ -467,7 +467,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Fine-tuning the Sentence Similarity Model"
+    "## Fine-tuning the Sentence Similarity Models"
    ]
   },
   {
@@ -591,7 +591,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Evaluating our models"
+    "# Evaluating our Models"
    ]
   },
   {
