--- a/frontend/translation/en.json
+++ b/frontend/translation/en.json
@@ -27,5 +27,6 @@
       "submit": "Submit (⇧ shift + ↵ enter)"
     }
   },
-  "filterBy": "Filter by..."
+  "filterBy": "Filter by...",
+  "findSimilar": "Find similar"
 }
