docs: changed some warning to more friendly notes

--- a/docs/_source/practical_guides/annotation_workflows/semantic_search.ipynb
+++ b/docs/_source/practical_guides/annotation_workflows/semantic_search.ipynb
@@ -10,7 +10,7 @@
     "\n",
     "## Feedback Dataset\n",
     "\n",
-    "<div class=\"alert alert-warning\">\n",
+    "<div class=\"alert alert-note\">\n",
     "\n",
     "Warning\n",
     "    \n",
