--- a/frontend/translation/en.json
+++ b/frontend/translation/en.json
@@ -31,5 +31,6 @@
   "filterBy": "Filter by...",
   "findSimilar": "Find similar",
   "metadata": "Metadata",
-  "clear-all": "Clear all"
+  "clear-all": "Clear all",
+  "reset": "Reset"
 }
