--- a/docs/_source/tutorials_and_integrations/tutorials/feedback/training-qa-transformers.ipynb
+++ b/docs/_source/tutorials_and_integrations/tutorials/feedback/training-qa-transformers.ipynb
@@ -85,12 +85,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
     "import argilla as rg\n",
-    "from datasets import load_dataset\n",
+    "import re\n",
+    "from datasets import load_dataset, Dataset\n",
     "from argilla.feedback import ArgillaTrainer, TrainingTask\n",
     "from transformers import pipeline, AutoTokenizer, AutoModelForQuestionAnswering\n",
     "from transformers import TrainingArguments, Trainer, DefaultDataCollator\n",
@@ -112,7 +113,7 @@
    "source": [
     "rg.init(\n",
     "    api_url=\"http://localhost:6900\",\n",
-    "    api_key=\"owner.apikey\"\n",
+    "    api_key=\"argilla.apikey\"\n",
     ")"
    ]
   },
@@ -127,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -143,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -156,7 +157,7 @@
        " 'answers': {'text': ['Professor Jerome Green'], 'answer_start': [136]}}"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -178,7 +179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -211,12 +212,12 @@
     "\n",
     "### Add Suggestions\n",
     "\n",
-    "To help our annotators and make the annotation process faster, we can add suggestions to our dataset. Suggestions are model predictions for our data items that will be shown on Argilla UI during the annotation process. As it is optional, depending on your project, it will gain you a lot of time. You can use any model of your preference to generate model predictions to your dataset. We will be using `deepset/electra-base-squad2` for demonstration purposes here. We can utilize the `pipeline` function from `transformers` to make things easier."
+    "To help our annotators and make the annotation process faster, we can add suggestions to our dataset. Suggestions are model predictions for our data items that will be shown on Argilla UI during the annotation process. As it is optional, depending on your project, it will gain you a lot of time. You can use any model of your preference to generate model predictions to your dataset. We will be using `distilbert-base-uncased-distilled-squad` for demonstration purposes here. We can utilize the `pipeline` function from `transformers` to make things easier."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -232,7 +233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -259,7 +260,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -275,19 +276,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Pushing records to Argilla...: 100%|██████████| 1/1 [00:00<00:00,  5.34it/s]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "remote_dataset = dataset.push_to_argilla(name=\"demonstration_data_squad_gpt2\", workspace=\"admin\") #R"
+    "remote_dataset = dataset.push_to_argilla(name=\"demonstration_data_squad_gpt2\", workspace=\"argilla\") #R"
    ]
   },
   {
@@ -301,11 +294,121 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "annotated_dataset_from_argilla = rg.FeedbackDataset.from_argilla(\"demonstration_data_squad_gpt2\", workspace=\"argilla\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We can then set the format of our dataset as `datasets` to convert it into a datasets object."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "annotated_dataset = annotated_dataset_from_argilla.format_as(\"datasets\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The annotators gave their responses as text pieces and we need to convert them into the start and end indices of the answer span."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def find_span(answer, context):\n",
+    "    matches = re.finditer(answer, context)\n",
+    "    for match in matches:\n",
+    "        if type(match) == re.Match:\n",
+    "            start_index = match.start()\n",
+    "            end_index = match.end()\n",
+    "            return start_index, end_index\n",
+    "    return None"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "By using the `find_span` function, we will create the `answer_start` and `answer_end` fields for our dataset."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def create_answer_columns(dataset):\n",
+    "    answer_starts = []\n",
+    "    answer_ends = []\n",
+    "    for item in dataset:\n",
+    "        answer = item[\"answer\"][0][\"value\"]\n",
+    "        answer_start, answer_end = find_span(answer, item[\"context\"])\n",
+    "        answer_starts.append(answer_start)\n",
+    "        answer_ends.append(answer_end)\n",
+    "    dataset = dataset.add_column(\"answer_start\", answer_starts)\n",
+    "    dataset = dataset.add_column(\"answer_end\", answer_ends)\n",
+    "    return dataset\n",
+    "\n",
+    "annotated_dataset = create_answer_columns(annotated_dataset)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We can now tokenize the `annotated_dataset` by mapping with our tokenizer function."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def tokenize_function(example):\n",
+    "    inputs = tokenizer(\n",
+    "        example[\"question\"],\n",
+    "        example[\"context\"],\n",
+    "        max_length=512,\n",
+    "        truncation=True,\n",
+    "        padding=\"max_length\",\n",
+    "    )\n",
+    "    \n",
+    "    inputs[\"start_positions\"] = annotated_dataset[\"answer_start\"]\n",
+    "    inputs[\"end_positions\"] = annotated_dataset[\"answer_end\"]\n",
+    "    return inputs\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "annotated_dataset_from_argilla = rg.FeedbackDataset.from_argilla(\"demonstration_data_squad\", workspace=\"admin\") #PROBLEM"
+    "tokenized_dataset = annotated_dataset.map(tokenize_function, batched=True).select_columns([\"input_ids\", \"attention_mask\", \"start_positions\", \"end_positions\"])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Let us split the dataset for training and validation sets."
    ]
   },
   {
@@ -326,21 +429,6 @@
     "else:\n",
     "    device = torch.device(\"cpu\")\n",
     "    print(\"No GPU available, using CPU instead.\")\n",
-    "\n",
-    "def tokenize_function(example):\n",
-    "    inputs = tokenizer(\n",
-    "        example[\"question\"],\n",
-    "        example[\"context\"],\n",
-    "        max_length=512,\n",
-    "        truncation=True,\n",
-    "        padding=\"max_length\",\n",
-    "    )\n",
-    "\n",
-    "    inputs[\"start_positions\"] = example[\"answers\"][\"answer_start\"][0]\n",
-    "    inputs[\"end_positions\"] = example[\"answers\"][\"answer_start\"][0] + len(example[\"answers\"][\"text\"][0])\n",
-    "    return inputs\n",
-    "\n",
-    "tokenized_dataset = dataset_hf.map(tokenize_function, batched=True)\n",
     "\n",
     "splited_dataset = tokenized_dataset.train_test_split(test_size=0.8)\n",
     "\n",
@@ -366,7 +454,6 @@
     "    logging_dir='./logs',\n",
     "    logging_steps=5,\n",
     "    load_best_model_at_end=True,\n",
-    "    metric_for_best_model=\"accuracy\",\n",
     "    greater_is_better=True,\n",
     "    dataloader_pin_memory=False,\n",
     ")\n",
@@ -386,9 +473,53 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Evaluation\n",
+    "## Inference\n",
     "\n",
-    "Now that we have our model trained, we need to evaluate it performance on different data."
+    "Now that we have our model trained, we can use it to find the answer span for a given question and context. We can use the `pipeline` function from `transformers` to make things easier. It will give us the answer as well as the start and end indices of the answer span."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "qa_pipeline = pipeline(\n",
+    "    \"question-answering\",\n",
+    "    model=model,\n",
+    "    tokenizer=tokenizer,\n",
+    "    device=device\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We just need the feed the function with the question and context to get the answer."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'score': 0.6772550344467163,\n",
+       " 'start': 27,\n",
+       " 'end': 41,\n",
+       " 'answer': 'natural beauty'}"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "qa_pipeline(question=\"For what is Venezuela famous?\", context=\"Venezuela is known for its natural beauty.\")"
    ]
   }
  ],
