--- a/frontend/translation/en.json
+++ b/frontend/translation/en.json
@@ -31,6 +31,6 @@
   "filterBy": "Filter by...",
   "findSimilar": "Find similar",
   "metadata": "Metadata",
-  "reset-all": "reset all",
+  "reset-all": "Reset all",
   "reset": "Reset"
 }
