rename filter global components

--- a/frontend/translation/en.json
+++ b/frontend/translation/en.json
@@ -31,6 +31,7 @@
   "filterBy": "Filter by...",
   "findSimilar": "Find similar",
   "metadata": "Metadata",
+  "responses": "Responses",
   "reset-all": "Reset all",
   "reset": "Reset"
 }
