--- a/frontend/translation/en.json
+++ b/frontend/translation/en.json
@@ -34,6 +34,7 @@
   "similarityScore": "Similarity Score",
   "similarUsing": "similar using",
   "metadata": "Metadata",
+  "responses": "Responses",
   "reset-all": "Reset all",
   "reset": "Reset",
   "with": "with",
