--- a/frontend/translation/en.json
+++ b/frontend/translation/en.json
@@ -27,12 +27,16 @@
       "submit": "Submit (⇧ shift + ↵ enter)"
     }
   },
+  "filters": "Filters",
   "filterBy": "Filter by...",
   "findSimilar": "Find similar",
-  "with": "with",
-  "similarUsing": "similar using",
-  "cancel": "Cancel",
-  "find": "Find",
   "similarTo": "Similar to",
-  "similarityScore": "Similarity Score"
+  "similarityScore": "Similarity Score",
+  "similarUsing": "similar using",
+  "metadata": "Metadata",
+  "reset-all": "Reset all",
+  "reset": "Reset",
+  "with": "with",
+  "find": "Find",
+  "cancel": "Cancel"
 }
