default workspace name changed to admin

--- a/docs/_source/tutorials_and_integrations/tutorials/feedback/labelling-feedback-setfit.ipynb
+++ b/docs/_source/tutorials_and_integrations/tutorials/feedback/labelling-feedback-setfit.ipynb
@@ -834,7 +834,7 @@
         }
       ],
       "source": [
-        "dataset.push_to_argilla(\"setfit_tutorial\", workspace=\"argilla\")"
+        "dataset.push_to_argilla(\"setfit_tutorial\", workspace=\"admin\")"
       ]
     },
     {
