worksapce name added

--- a/docs/_source/tutorials_and_integrations/tutorials/feedback/train-reward-model-rlhf.ipynb
+++ b/docs/_source/tutorials_and_integrations/tutorials/feedback/train-reward-model-rlhf.ipynb
@@ -466,7 +466,7 @@
         "\n",
         "# add records and publish\n",
         "dataset.add_records(records)\n",
-        "dataset.push_to_argilla(name=\"comparison-data-falcon\")\n"
+        "dataset.push_to_argilla(\"comparison-data-falcon\", workspace=\"admin\")\n"
       ]
     },
     {
