workspace=admin added to from_argilla()

--- a/docs/_source/tutorials_and_integrations/tutorials/feedback/train-reward-model-rlhf.ipynb
+++ b/docs/_source/tutorials_and_integrations/tutorials/feedback/train-reward-model-rlhf.ipynb
@@ -606,7 +606,7 @@
       "outputs": [],
       "source": [
         "# run this cell if you have ranked the responses in the UI\n",
-        "feedback_dataset = rg.FeedbackDataset.from_argilla('comparison-data-falcon')"
+        "feedback_dataset = rg.FeedbackDataset.from_argilla('comparison-data-falcon', workspace=\"admin\")"
       ]
     },
     {
