Workspace name added to RLHF tutorial (#4165)
Closes #4153

**Type of change**

- [X] Documentation update

Workspace names added to two commands when argilla was communicating
with HF Spaces

--- a/docs/_source/tutorials_and_integrations/tutorials/feedback/train-reward-model-rlhf.ipynb
+++ b/docs/_source/tutorials_and_integrations/tutorials/feedback/train-reward-model-rlhf.ipynb
@@ -466,7 +466,7 @@
         "\n",
         "# add records and publish\n",
         "dataset.add_records(records)\n",
-        "dataset.push_to_argilla(name=\"comparison-data-falcon\")\n"
+        "dataset.push_to_argilla(\"comparison-data-falcon\", workspace=\"admin\")\n"
       ]
     },
     {
@@ -606,7 +606,7 @@
       "outputs": [],
       "source": [
         "# run this cell if you have ranked the responses in the UI\n",
-        "feedback_dataset = rg.FeedbackDataset.from_argilla('comparison-data-falcon')"
+        "feedback_dataset = rg.FeedbackDataset.from_argilla('comparison-data-falcon', workspace=\"admin\")"
       ]
     },
     {
