--- a/docs/_source/tutorials_and_integrations/tutorials/feedback/labelling-feedback-langchain-syntethic.ipynb
+++ b/docs/_source/tutorials_and_integrations/tutorials/feedback/labelling-feedback-langchain-syntethic.ipynb
@@ -103,7 +103,7 @@
         "# Replace api_key if you configured a custom API key\n",
         "rg.init(\n",
         "    api_url=\"http://localhost:6900\", \n",
-        "    api_key=\"argilla.apikey\"\n",
+        "    api_key=\"admin.apikey\"\n",
         ")"
       ]
     },
