api_key is recommended instead of openai_api_key

--- a/docs/_source/tutorials_and_integrations/tutorials/feedback/labelling-feedback-langchain-syntethic.ipynb
+++ b/docs/_source/tutorials_and_integrations/tutorials/feedback/labelling-feedback-langchain-syntethic.ipynb
@@ -210,7 +210,7 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "openai_model = OpenAI(openai_api_key=os.environ.get(\"OPENAI_API_KEY\"))"
+        "openai_model = OpenAI(api_key=os.environ.get(\"OPENAI_API_KEY\"))"
       ]
     },
     {
