--- a/frontend/translation/en.json
+++ b/frontend/translation/en.json
@@ -35,9 +35,13 @@
   "similarUsing": "similar using",
   "metadata": "Metadata",
   "responses": "Responses",
+  "suggestions": "Suggestions",
   "reset-all": "Reset all",
   "reset": "Reset",
   "with": "with",
   "find": "Find",
-  "cancel": "Cancel"
+  "cancel": "Cancel",
+  "score": "Score",
+  "values": "Values",
+  "agent": "Agent"
 }
